Updated to Minecraft version 1.20.1